thanks added form1.html

--- a/form1.html
+++ b/form1.html
@@ -78,6 +78,10 @@
 
             <button type="submit">GET A CALL</button>
         </fieldset>
+        <h1>THANKS</h1>
     </form>
 </body>
 </html>
+
+
+
